# pico-tpm-spider

./: CMakeLists.txt  README.md  main.c  sniffer.pio
hardware/: pico-tpm-spider.kicad_pcb  pico-tpm-spider.kicad_prl  pico-tpm-spider.kicad_pro  pico-tpm-spider.kicad_sch
